[emacs] Ignore files in elfeed database directory.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -275,6 +275,11 @@ Configure news feeds.
     :config
     (setq elfeed-db-directory
           (expand-file-name "Nieuws/elfeed/" koek/documents-dir))
+
+    (use-package recentf
+      :config
+      (push elfeed-db-directory recentf-exclude))
+
     (mapc (lambda (feed)
             (let ((args
                    (pcase feed
