--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -115,7 +115,10 @@ Configure agendas.
     :defer t
     :config
     (setq org-capture-templates
-          `(("t" "Task" entry (file+olp "Inbox.org" "Taken")
+          `(("j" "Journal" entry (file+olp+datetree "Inbox.org" "Journaal")
+             "* %?"
+             :empty-lines 1)
+            ("t" "Task" entry (file+olp "Inbox.org" "Taken")
              "* TODO %?"
              :empty-lines 1)
             ("a" "Appointment" entry (file "Kalenders/Afspraken.org")
