[emacs] Switch Reddit from real time to weekly news feeds.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -236,24 +236,24 @@ Configure news feeds.
         ("Baggers" youtube "UCMV8p6Lb-bd6UZtTc_QD4zA" lisp)
         ("Caches to Caches" "http://cachestocaches.com/feed" blog ai)
         ("Clickspring" youtube "UCworsKCR-Sx6R6-BnIjS2MA" metalwork)
-        ("Clojure" reddit top "Clojure" clojure)
+        ("Clojure" reddit month "Clojure" clojure)
         ("ClojureTV" youtube "UCaLlzGqiPE2QRj6sSOawJRg" clojure)
         ("Emacs" reddit "emacs" emacs)
         ("Erlang Solutions" youtube "UCKrD_GYN3iDpG_uMmADPzJQ" erlang)
-        ("Erlang" reddit top "erlang" erlang)
-        ("Furniture Making" reddit top "FurnitureMaking" woodwork)
+        ("Erlang" reddit month "erlang" erlang)
+        ("Furniture Making" reddit month "FurnitureMaking" woodwork)
         ("Ishitani Furniture" youtube "UC7FkqjV8SU5I8FCHXQSQe9Q" woodwork)
         ("John Heisz" youtube "UCjA8vRlL1c7BDixQRJ39-LQ" woodwork)
-        ("LEGO" reddit top "lego" lego)
+        ("LEGO" reddit month "lego" lego)
         ("Layout Land" youtube "UC7TizprGknbDalbHplROtag" css)
-        ("Linux" reddit top "linux" linux)
-        ("Lisp" reddit top "lisp" lisp)
+        ("Linux" reddit month "linux" linux)
+        ("Lisp" reddit month "lisp" lisp)
         ("LiveOverflow" youtube "UClcE-kVhqyiHCcjYwcpfj9w" hack)
         ("Luke Smith" youtube "UC2eYFnH61tmytImy1mTYvhA" foss)
         ("Mastering Emacs" "https://www.masteringemacs.org/feed" blog emacs)
         ("Netflix TechBlog" "https://medium.com/feed/netflix-techblog" blog ai)
         ("Professor Leonard" youtube "UCoHhuummRZaIVX7bD4t2czg" mathematics)
-        ("Programming" reddit top "programming" program)
+        ("Programming" reddit month "programming" program)
         ("ROBOHEMIAN!" youtube "GravityRoad" electronics)
         ("Rainfall Projects" youtube "UCPO4D4-UeeFQceK8XrgwXug" woodwork metalwork)
         ("Sacha Chua" "http://sachachua.com/blog/category/emacs/feed/" blog emacs)
@@ -267,7 +267,7 @@ Configure news feeds.
 
   (\"title\" \"url\" tag-1 tag-2 tag-n)
   (\"title\" reddit \"id\" tag-1 tag-2 tag-n)
-  (\"title\" reddit top \"id\" tag-1 tag-2 tag-n)
+  (\"title\" reddit month \"id\" tag-1 tag-2 tag-n)
   (\"title\" youtube \"id\" tag-1 tag-2 tag-n)")
 
     (defun koek/add-feed (title url &rest tags)
@@ -286,13 +286,13 @@ Configure news feeds.
     (mapc (lambda (feed)
             (let ((args
                    (pcase feed
-                     (`(,title reddit top ,id . ,tags)
-                      `(,(concat title " (Reddit - Top)")
+                     (`(,title reddit month ,id . ,tags)
+                      `(,(concat title " (Reddit - Month)")
                         ,(format "https://www.reddit.com/r/%s/top.rss?t=month" id)
                         post ,@tags))
                      (`(,title reddit ,id . ,tags)
                       `(,(concat title " (Reddit)")
-                        ,(format "https://www.reddit.com/r/%s.rss" id)
+                        ,(format "https://www.reddit.com/r/%s/top.rss?t=week" id)
                         post ,@tags))
                      (`(,title youtube ,id . ,tags)
                       `(,(concat title " (YouTube)")
