--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1172,6 +1172,11 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     :config
     (declare-function ivy-mode "ivy")
 
+    ;; When counsel loads, various commands setup initial input
+    (use-package counsel
+      :config
+      (setq ivy-initial-inputs-alist nil))
+
     (setq ivy-re-builders-alist
           '((swiper-isearch . ivy--regex-plus)
             (counsel-ag . ivy--regex-plus)
@@ -1179,7 +1184,6 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
             (t . ivy--regex-fuzzy)))
     (setq ivy-use-virtual-buffers t)
     (setq ivy-virtual-abbreviate 'abbreviate)
-    (setq ivy-initial-inputs-alist nil)
     (setq ivy-use-selectable-prompt t)
     (setq ivy-count-format "%d/%d ")
     (ivy-mode)
