[emacs] Defer loading of counsel.
Not deferring load produces a warning when running Emacs for the first
time.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1174,6 +1174,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
 
     ;; When counsel loads, various commands setup initial input
     (use-package counsel
+      :defer t
       :config
       (setq ivy-initial-inputs-alist nil))
 
