[emacs] Reference parts in other files.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1450,6 +1450,8 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
 ** mu4e - E-mail client
 [[https://github.com/djcb/mu][mu4e (GitHub)]]
 
+For e-mail accounts, see [[file:90-personal.org::*E-mail%20accounts][E-mail accounts]].
+
 #+BEGIN_SRC emacs-lisp
   (use-package mu4e
     :bind
@@ -1514,6 +1516,8 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
 
 ** elfeed - News reader
 [[https://github.com/skeeto/elfeed][elfeed (GitHub)]]
+
+For news feeds, see [[file:90-personal.org::*News%20feeds][News feeds]].
 
 #+BEGIN_SRC emacs-lisp
   (use-package elfeed
@@ -2087,6 +2091,8 @@ It fails with error:
 See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
 
 ** Org
+For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
+
 #+BEGIN_SRC emacs-lisp
   (use-package org
     :mode ((rx ".org" string-end) . org-mode)
