[emacs] Mimic global commands.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1539,6 +1539,12 @@ For news feeds, see [[file:90-personal.org::*News%20feeds][News feeds]].
     :ensure t
     :defer t)
 
+  (use-package pdf-links
+    :bind
+    (:map pdf-links-minor-mode-map
+     ("C-c j j" . pdf-links-isearch-link)
+     ("C-c j l" . pdf-links-action-perform)))
+
   (use-package pdf-loader
     :config
     (pdf-loader-install 'no-ask 'no-install-deps))
