--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -272,7 +272,10 @@ Configure news feeds.
   (\"title\" \"url\" tag-1 tag-2 tag-n)
   (\"title\" reddit \"id\" tag-1 tag-2 tag-n)
   (\"title\" reddit month \"id\" tag-1 tag-2 tag-n)
-  (\"title\" youtube \"id\" tag-1 tag-2 tag-n)")
+  (\"title\" youtube \"id\" tag-1 tag-2 tag-n)
+
+  Reddit news feeds are tagged with post and YouTube news feeds are
+  tagged with video.")
 
     (defun koek/add-feed (title url &rest tags)
       "Add news feed to the database.
