[emacs] Enable lexical binding for Emacs Lisp code blocks.

--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -1,4 +1,5 @@
 #+TITLE: Personal
+#+PROPERTY: header-args:emacs-lisp :lexical yes
 
 * Header
 Enable lexical binding. When visiting the tangled file, enable read
