[emacs] Clarify comments.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1071,9 +1071,10 @@ When revisiting then modifying file, history is discarded.
     (setq aw-keys '(?q ?s ?d ?f ?j ?k ?l ?m))
     (setq aw-dispatch-alist '((?o aw-flip-window)))
     (setq aw-leading-char-style 'path)
-    ;; When there are two windows, Ace chooses the other window. When
-    ;; there are three or more windows, Ace asks for a window. Enabling
-    ;; background (default) differentiates both cases.
+    ;; When there are two windows, ace chooses the other window. When
+    ;; there are three or more windows, ace asks for a window. Enabling
+    ;; background (default) differentiates both cases. Don't disable
+    ;; background when jumping to a window.
     ;; (setq aw-background nil)
     )
 #+END_SRC
@@ -1091,8 +1092,9 @@ When revisiting then modifying file, history is discarded.
     (winner-mode)
 
     ;; Reading from the minibuffer doesn't change the window layout.
-    ;; Storing the window layout stores a consecutive identical layout.
-    ;; Don't store the window layout when reading from the minibuffer.
+    ;; Storing the window layout when it didn't change, stores a
+    ;; consecutive identical layout. Don't store the window layout when
+    ;; reading from the minibuffer.
     (remove-hook 'minibuffer-setup-hook #'winner-save-unconditionally))
 #+END_SRC
 
