--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1088,11 +1088,12 @@ When revisiting then modifying file, history is discarded.
     :config
     (declare-function winner-save-unconditionally "winner")
 
+    (winner-mode)
+
     ;; Reading from the minibuffer doesn't change the window layout.
     ;; Storing the window layout stores a consecutive identical layout.
     ;; Don't store the window layout when reading from the minibuffer.
-    (remove-hook 'minibuffer-setup-hook #'winner-save-unconditionally)
-    (winner-mode))
+    (remove-hook 'minibuffer-setup-hook #'winner-save-unconditionally))
 #+END_SRC
 
 ** eyebrowse - Workspaces
