[emacs] Fontify LaTeX blocks in org-mode.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2172,6 +2172,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
 
     ;; Appearance
     (setq org-adapt-indentation nil)
+    (setq org-highlight-latex-and-related '(native))
 
     ;; Appearance - Images
     (setq org-startup-with-inline-images t)
