[emacs] Lowercase word id.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -2274,7 +2274,7 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
     (let ((whitelist ()))
       (setq org-confirm-babel-evaluate
             (lambda (_language _body)
-              ;; A reference to a buffer is a good ID but would storing
+              ;; A reference to a buffer is a good id but would storing
               ;; a reference prevent the buffer from being garbage
               ;; collected?
               (let ((id (or (buffer-file-name) (buffer-name))))
