--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1059,6 +1059,13 @@ When revisiting then modifying file, history is discarded.
 
 * Windows & buffers
 
+** Windows
+Resize windows pixelwise, not characterwise.
+
+#+BEGIN_SRC emacs-lisp
+  (setq window-resize-pixelwise t)
+#+END_SRC
+
 ** ace-window - Jump to window
 [[https://github.com/abo-abo/ace-window][ace-window (GitHub)]]
 
